Release 5.5.1 Fix vertical nav bar sticky position when "Post-game summary" is visible
Release 5.5.1 Fix vertical nav bar sticky position when "Post-game summary" is visible

--- a/scss/_module_classiclayout.scss
+++ b/scss/_module_classiclayout.scss
@@ -40,7 +40,7 @@
 }
 
 .appdetailssection_AppDetailsSection_2r4TK.appdetailsprimarylinkssection_LinksSection_3-V8v {
-  transform: translate(-2px, 0px) translateY(calc(var(--VerticalNavBarOffset) * 1.7));
+  transform: translate(-2px, 5px) translateY(calc(var(--VerticalNavBarOffset) * 1.7));
   position: sticky;
   height: 0px;
 
